--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-testing<!-- Start writing your project code in this file! -->
+<!-- Start writing your project code in this file! -->
+<script>
+var grid = [["","",""],["","","",]["","",""]];
+
+// Console.log(grid)
+
+function update(x, y, value) {
+    grid[x][y] = value;
+    // Console.log(grid);
+}
+</script>
