did a 3x3 array that actually worked

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!-- Start writing your project code in this file! -->
 <script>
-var grid = [["","",""],["","","",]["","",""]];
 
+var grid = [
+    ['X','O','X'],
+    ['X','X','O'],
+    ['O','O','X']
+]
+
+console.log(grid);
+//var grid = [["","",""],["","","",]["","",""]];
 // Console.log(grid)
-
-function update(x, y, value) {
-    grid[x][y] = value;
+//function update(x, y, value) {
+    //grid[x][y] = value;
     // Console.log(grid);
-}
 </script>
