--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ console.log(grid);
 function reassign(array, index, newValue) {
     array[index] = newValue;
 }
-// I reassigned(updated) the first array (0)
+// Reassigned(updated) the first array (0)
 reassign(grid, [0], ['X','O','O']);
+// Reassigned the second array (1)
+reassign(grid, [1], ['O','X','X']);
+// Reassigned the third array (2)
+reassign(grid, [2], ['X','X','O']);
 </script>
