--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- Start writing your project code in this file! -->
+
 <script>
 // Create a grid 3x3
 var grid = [
@@ -18,4 +19,20 @@ reassign(grid, [0], ['X','O','O']);
 reassign(grid, [1], ['O','X','X']);
 // Reassigned the third array (2)
 reassign(grid, [2], ['X','X','O']);
+
+// Checking to see how the grid look
+console.log(grid);
+
+function reassign(array, index, newValue) {
+    array[index] = newValue;
+}
+// Reassigned(updated) the first array (0)
+reassign(grid, [0], ['O','O','O']);
+// Reassigned the second array (1)
+reassign(grid, [1], ['O','X','X']);
+// Reassigned the third array (2)
+reassign(grid, [2], ['X','X','O']);
+
+// O won
+console.log(grid);
 </script>
