--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+
 <div>
-    <button onclick="updateCell(0, 0)">?</button>
-    <button onclick="updateCell(0, 1)">?</button>
-    <button onclick="updateCell(0, 2)">?</button>
+    <button id="cell1" onclick="updateCell(0, 0, 1)">?</button>
+    <button id="cell2" onclick="updateCell(0, 1, 2)">?</button>
+    <button id="cell3" onclick="updateCell(0, 2, 3)">?</button>
 </div>
 <div>
-    <button onclick="updateCell(1, 0)">?</button>
-    <button onclick="updateCell(1, 1)">?</button>
-    <button onclick="updateCell(1, 2)">?</button>
+    <button id="cell4" onclick="updateCell(1, 0, 4)">?</button>
+    <button id="cell5" onclick="updateCell(1, 1, 5)">?</button>
+    <button id="cell6" onclick="updateCell(1, 2, 6)">?</button>
 </div>
 <div>
-    <button onclick="updateCell(2, 0)">?</button>
-    <button onclick="updateCell(2, 1)">?</button>
-    <button onclick="updateCell(2, 2)">?</button>
+    <button id="cell7" onclick="updateCell(2, 0, 7)">?</button>
+    <button id="cell8" onclick="updateCell(2, 1, 8)">?</button>
+    <button id="cell9" onclick="updateCell(2, 2, 9)">?</button>
 </div>
 
 <!-- Start writing your project code in this file! -->
@@ -30,17 +31,9 @@ var player = "O";
 var row = 0;
 var col = 0;
 
-function updateRow() {
-    row++;
-}
-
-function updateCol() {
-    col++;
-}
-
 function updateCell(row,col)  {
     grid[row][col] = player;
-     //document.getElementById("cell1").innerText = player;
+     document.getElementById("cell1").innerText = player;
      if (player == "X") {
          // Switch to player "O"
          player = "O";
@@ -57,17 +50,17 @@ function updateCell(row,col)  {
 }
 
 
-//function reassign(array, index, newValue) {
-  //  array[index] = newValue;
-//}
-// Reassigned(updated) the first array (0)
+function reassign(array, index, newValue) {
+  array[index] = newValue;
+}
+ //Reassigned(updated) the first array (0)
 //reassign(grid, [0], ['X','O','O']);
-// Reassigned the second array (1)
+ //Reassigned the second array (1)
 //reassign(grid, [1], ['O','X','X']);
-// Reassigned the third array (2)
+ //Reassigned the third array (2)
 //reassign(grid, [2], ['X','X','O']);
 
-// Checking to see how the grid look
-//console.log(grid);
+ //Checking to see how the grid look
+console.log(grid);
 
 </script>
