--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<style>
+
+    button {
+  
+      font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+  
+    }
+  
+  </style>
 
 <div>
     <button id="cell1" onclick="updateCell(0, 0, 1)">?</button>
@@ -31,10 +40,15 @@ var player = "O";
 var row = 0;
 var col = 0;
 
-function updateCell(row,col)  {
-    grid[row][col] = player;
-     document.getElementById("cell1").innerText = player;
-     if (player == "X") {
+function updateCell(row, col, numb)  {
+
+    if (grid[row][col] == '') {
+        
+       grid[row][col] = player;
+
+       document.getElementById("cell" + num).innerText = player;
+
+       if (player == "X") {
          // Switch to player "O"
          player = "O";
      }
@@ -42,25 +56,15 @@ function updateCell(row,col)  {
          // Updating the player to "X"
          player = "X";
      }
-     console.log(grid);
-     updateCol();
-     updateRow();
-     console.log("row = " + row);
-     console.log("col = " + col);
+     //console.log(grid);
+     //updateCol();
+     //updateRow();
+     //console.log("row = " + row);
+     //console.log("col = " + col);
+     //console.log("cell = " + num);
+    }
+
 }
 
-
-function reassign(array, index, newValue) {
-  array[index] = newValue;
-}
- //Reassigned(updated) the first array (0)
-//reassign(grid, [0], ['X','O','O']);
- //Reassigned the second array (1)
-//reassign(grid, [1], ['O','X','X']);
- //Reassigned the third array (2)
-//reassign(grid, [2], ['X','X','O']);
-
- //Checking to see how the grid look
-console.log(grid);
 
 </script>
